2004-02-24  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (place_widgets):

	The applet now places the text and icon in the right
	way in every panel/dimension. Also cleaned up the
	place_widgets function.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>
	
	* gweather-applet.c (place_widgets):
	
	Fixes text placing for horizontal panels.
	Vertical is still broken in some cases.

	Patch by: Danilo Segan <dsegan@gmx.net>

	Fixes bug #135205.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* Locations:

	Patch that adds more Malaysian contries and adds "MY" to the Asia
	list.

	By: Andre Dahlqvist  <andre-bugs@telia.com>

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-about.c (gweather_about_run):
	Set the screen right when the user requests
	the about dialog and it's already there but
	not on the right screen.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-dialog.c (gweather_dialog_create):
	Set the fill option for gtk_table_attach to
	GTK_FILL instead of '0'.

	Patch by: Detlef Reichl  <detlef.reichl@gmx.org>.

	Fixes bug #135164.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (help_cb):
	Applied patch by Vijaykumar Patwari to
	fix help in the context menu.

	Fixes bug #134826.

2004-02-18 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/gweather.xml: Updated for GNOME 2.6.
	* docs/C/gweather-C.omf: Updated for GNOME 2.6.
	* docs/C/l10n.txt: Updated for GNOME 2.6.

2004-02-17  Dennis Smit  <ds@nerds-incorporated.org>

	* Locations: Adding more swedish cities.

	Patch by: Andre Dahlgvist <andre-bugs@telia.com>

	Fixes bug #134479.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>

	* location.c (parse_xml): replaced deprecated glib functions.

	* weather.c (iwin_start_open): likewise.
