@@ -1,3 +1,12 @@
+2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>
+
+	* gweather-applet.c (gweather_applet_create):
+	Connect a signal to change_background.
+
+	(change_background_cb):
+	Added function and handle background changes.
+	Doesn't work for pixmap backgrounds yet.
+
 2004-02-24  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* gweather-applet.c (place_widgets):
